--- a/skibidi/summary.html
+++ b/skibidi/summary.html
@@ -5,39 +5,79 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/style.css">
-  <title>Summary</title>
+  <title>Skibidi Toilet Storyline</title>
+  <meta property="og:title" content="Storylines BlugrayGuy.com">
+  <meta property="og:description" content="The full storylines of the skibidi toilet's series history from episode 0 to the actual episode!">
+  <meta name="theme-color" content="#0000FF">
+  <meta property="og:image" href="https://media.discordapp.net/attachments/1076988047998074931/1219271166506569850/gifstuff4-ezgif.com-video-to-gif-converter.gif?ex=660ab1c3&is=65f83cc3&hm=0a1a66362733e25fbbb44d1e907f0af3b9033981d54525224004269f57a24103&"> 
 </head>
 
 <body>
-  <header>
-    <a href="index.html" id="Redirect"><h1>BlugrayGuy Website</h1></a>
+   <header>
+    <a href="index.html" id="Redirect"><h1>BlugrayGuy Website.</h1></a>
     <nav>
       <ul>
         <li><a href="https://linktr.ee/blugray">All Socials</a></li>
-        <li><a href="Blugray-console.html">Blugray Console</a>
+        <li><a href="Blugray-console.html">Blugray Console</a></li>
       </ul>
     </nav>
   </header>
-  <br><br><br><br>
- <section id="about">
-   <h1>
-     Summary of Skibidi Toilet 71
-   </h1>
-   <p>
-     <li> The episode 71 of Skibidi Toilet start with the <b>titans</b> <i>fighting</i> with a <b>skibidi toilet missiles launcher</b>, we are in the pov of a <b>simple cameraman </b>but sadly<i> dies</i> after that the skibidi toilet shoot on the <b>Titan TV Man</b>, The Titan Tv Man make a <b>shield</b> with his <b>Sword</b>.<br>
-     <li> Subsequently we learn that we were a <b>cameraman</b> who observed the scene from the <i>dead cameraman's POV</i>, we are on an <i>airfield</i> deserted and destroyed by the Skibidi toilets, but we learn very quickly that we are on the <b>skibidi toilet bunker</b>. When suddenly the <i>bunker opens</i> and a <b>container skibidi toilet helicopter</b> comes out of the bunker and flees, then the <b>Gman (G-Toilet)</b> comes out and <i>devastates everything without leaving anything alive</i>... We also learn in this sequence that the <b>Skibidi DJ Toilet is not dead</b> because we saw it <b>destroyed in episode 70</b>...<br>
-     <li> While the Gman devastates everything we see before us the  <b>skibidi toilet with a body in a suit</b> already appearing in <b>episode 62 and reappeared after in episode 66</b>... Then after devastation the Gman finishes us off and leaves like a <i>coward</i>...<br>
-     <li> After the cowardly Gman leaves, the <b>Astro Toilet</b> arrives to <i>finish him off</i> but he is already gone and the Astro Toilet examines the area and sees that the Gman has caused <b>carnage</b>... Then the Astro Toilet goes <i>hunting for the Gman</i>... (End of the episode)
-   </p>
- </section>
- <section id="about">
-   <h1>
-     Summary of Skibidi Toilet 72
-   </h1>
-   <p>
-     <li> <b>part 1 summary coming soon...</b>
-   </p>
- </section>
+<main>
+  <br>
+  <div class="story">
+    <section id="about">
+  <h1>- Full skibidi toilet storylines</h1>
+  <p>First of all, we are going to review the <b>Skibidi</b> <b>Toilet</b> and its origins.<br><br>
+The <b>Skibidi</b> <b>Toilet</b> is a series created by the YouTuber of "<b>SFM</b> animations" "<b>DaFuq!?Boom!</b>", this series is made up of <b>toilets</b> who sing music straight from <b>tiktok</b>, it's a remix of "<b>give</b> it to me" by the <b>singer</b> named <b>Neli</b> <b>Furtado</b>.<br>
+on the other side (the <b>protectors</b> of the world) the <b>cameramen</b>, <b>Speakeman</b> and <b>TVMan</b> or more quickly "<b>the</b> <b>alliance</b>" fights them in a <b>war</b> which we can call almost endless, on the side of the <b>skibidi</b> <b>Toilet</b> their leader is the <b>Gman</b> <b>Toilet</b> (<b>G-Toilet</b>) as well as later the "<b>Scientist</b> <b>Toilet</b>" which will become temporarily, on the <b>cameraman's</b> side the leader is still unknown at this time...<br><br>
+- <b>Episode</b> 0 to <b>Episode</b> 20.<br><br>
+The first <b>toilet</b> to exist is called the <b>OG-Toilet</b> for "<b>Original</b> <b>Toilet</b>", this <b>toilet</b> has only low power and does not yet know how to move it...<br>
+later we discover more <b>toilets</b> such as:
+The <b>Gman</b>, The <b>giant</b> <b>toilets</b>, The <b>urinals</b>, etc...<br><br>
+- <b>Episode</b> 21 to 50.<br><br>
+A long time later (<b>ep</b> 40+) we discover a new character, a mysterious character who observes the <b>fights</b>, he is dressed in an <b>Orange</b> <b>suit</b> and <b>glasses</b>, we quickly understand who it is.<br>
+It's about the <b>creator</b>, but it's also about <b>Blugray</b>, a character who had been forgotten in the <b>darkness</b> of the <b>channel</b>...<br>
+We also discover <b>women</b> for the first time with the first, <b>Girl</b> <b>Cameraman</b>, and after <b>TV</b> <b>Women</b> and subsequently <b>Camera</b> <b>women</b> and <b>Speaker</b> <b>Woman</b>.<br>
+We also discover the <b>Titans</b>, the first was discovered at the beginning of the series it is "<b>Titan</b> <b>Cameraman</b>" but later we also discover <b>Titan</b> <b>SpeakerMan</b> and then from <b>episode</b> 41 we discover the <b>Titan</b> <b>TVMan</b> then after a few <b>episodes</b> became <b>Titan</b> <b>Cineman</b> and after being destroyed by the <b>Titan</b> <b>SpeakerMan</b> who was infected by a <b>Toilet</b> <b>parasite</b> created by the <b>Scientist</b> <b>Toilet</b> a long time ago...<br>
+It wasn't long after the <b>Cineman's</b> defeat that the <b>cameramen</b> returned their <b>Titan</b> <b>Cameraman</b>, which was upgraded after taking <b>damage</b> from the <b>Gman</b>.<br><br>
+- <b>Episode</b> 51 to 69<br><br>
+The <b>speakerman</b> being parasitized by the <b>scientist</b> continues to wreak havoc but not for long because the <b>cameraman</b> comes to fight him and destroys the parasite in <b>episode</b> 57...<br><br>
+Then in <b>episode</b> 60 we make the terrifying discovery of the immense <b>scientist's</b> mecha...<br><br>
+Then in the next <b>episode</b> we discover a <b>Skibidi</b> <b>Toilet</b> Mutant and the <b>Skibidi</b> <b>Toilet</b> Buzzsaw.<br><br>
+
+In <b>episode</b> 65 the <b>Titan</b> went to fight the <b>gman</b> and his troop but his troop leaves and leaves the <b>gman</b> alone and a fight begins, the <b>Titan</b> wins but discovers that it was all a trap, the <b>gman</b> was a fake and several <b>skibidi</b> kamikaze arrive and destroy the <b>cameraman</b> <b>titan</b>.<br>
+In <b>episode</b> 66 the <b>alliance</b> was made aware of this and it is called "Cameraman Rage" and destroys all the <b>Skibidi</b> <b>Toilets</b> in anger...<br><br>
+
+In <b>episode</b> 67 the <b>cameramen</b> return to the scene of the chaos in front of the <b>Skibidi</b> <b>Toilet</b> bunker, formerly the Alpha Hills government bunker.<br>
+In this <b>episode</b> we find the <b>skibidi</b> <b>Toilet</b> mafia not seen since season 3 or 4.<br>
+Subsequently we find the <b>Titan</b> <b>TV</b> <b>Man</b> which is brand new because it had been destroyed earlier...<br>
+he wreaks carnage with his power and destroys any <b>skibidi</b> <b>Toilet</b> that puts him in his passages.<br><br>
+
+In <b>episode</b> 68 and 69 the <b>alliance</b> enters the Alpha Hills bunkers and goes in search of the <b>scientist</b>, they will discover zombie <b>Toilet</b> and Micheal Jackson <b>Toilet</b> and Walter White and Jessie <b>Toilet</b>...<br><br>
+
+- <b>Episode</b> 70 to 71<br><br>
+
+Being in <b>Plungerman</b>'s POV we see what he sees, and discover that <b>Blugray</b> a.k.a. Secret Agent is in fact the administrator (head) of the government.<br>
+Let's go back 2 years earlier, a video having been published in 2021 then deleted named <b>Blugray</b> - Demand or the <b>cameraman</b> and <b>TVMan</b> and was created by the Russian government, everything is linked but by two different universes...<br>
+So we will see this a little later and see that it all makes sense...<br>
+back to <b>episode</b> 70, we find out that <b>Lucky</b> <b>Cameraman</b> (<b>Gray</b> <b>Servitor</b> / <b>Simp</b> <b>Cameraman</b>) had something to do with all this, he has an unknown/unidentified device...<br><br>
+
+Shortly after we enter the room with the <b>scientist</b>, a fight begins, and the <b>alliance</b> wins but unfortunately we lost the two best fighters, <b>Plungerman</b> and <b>Black</b> <b>SpeakerMan</b>...<br>
+Strangely the <b>plungerman</b> sees the ghosts of his allies, then is teleported into a room with <b>Blugray</b>, a discussion starts where it is said "The <b>scientist</b> is done but a greater threat is coming and that is why the <b>PlungerMan's</b> pov must remain secret, there is no more proof, the <b>blugray</b> has erased everything but one thing remains: the <b>PlungerMan</b>, he has seen too much and disconnects him.<br><br>
+
+History/theory:<br>
+<b>Blugray</b> has become the head of the government and the <b>alliance</b> created by the government, <b>Blugray</b> can therefore control the <b>alliance</b> from a distance but prefers to remain Secret to avoid any problems...<br>
+We still don't know where the <b>toilet</b> comes from, but we know where the alliance comes from.<br><br>
+
+Let's go to <b>episode</b> 71, we discover in this one why the <b>titan</b> <b>tv</b> <b>man</b> has a broken <b>TV</b> [see Summary page],<br>
+subsequently we discover that we are in reality on a gigantic silo of the bunker which actually contains the <b>Gman</b>, then he comes out devastates everything and flees...<br><br>
+
+- <b>Episode</b> 72<br><br>
+
+Soon...</p>
+  </section>
+</main>
+
 </body>
 <footer class="footer-container">
   <div class="footer-content">
@@ -51,4 +91,4 @@
     </ul>
   </nav>
 </footer>
-</html>
+</html> 
