Update and rename YouTube.html to Miscellaneous/YouTube.html

--- a/Miscellaneous/YouTube.html
+++ b/Miscellaneous/YouTube.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="/style.css">
 <title>YouTube Player</title>
 <style>
   button {
@@ -24,15 +24,16 @@
 </head>
 <body>
      <header>
-    <a href="index.html" id="Redirect"><h1>Skibidi Toilet Community - BlugrayGuy.com</h1></a>
+    <a href="/index.html" id="Redirect"><h1>BlugrayGuy Website</h1></a>
     <nav>
       <ul>
         <li><a href="https://linktr.ee/blugray">All Socials</a></li>
-        <li><a href="Blugray-console.html">Blugray Console</a></li>
-        <li><a href="summary.html">Skibidi Toilet Ep Summary</a></li>
+        <li><a href="/blugray/Blugray-console.html">Blugray Console</a></li>
       </ul>
     </nav>
     </header>
+
+<br><br><br><br>
 
 <iframe id="player" width="900" height="460" frameborder="0" allowfullscreen></iframe><br>
 
@@ -78,4 +79,16 @@
 </script>
 
 </body>
+<footer class="footer-container">
+  <div class="footer-content">
+    <img src="/Keams.png" alt="Keams" id="kkpng">
+    <span>Powered by KeamsOS ©2024 Discode-Studio, all rights reserved.</span>
+  </div>
+  <nav class="footer-nav">
+    <ul>
+      <li><a href="https://linktr.ee/blugray">All Socials</a></li>
+      <li><a href="/blugray/Blugray-console.html">Blugray Console</a></li>
+    </ul>
+  </nav>
+</footer>
 </html>
