--- a/Miscellaneous/comments-space.html
+++ b/Miscellaneous/comments-space.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <title>Comments Space - BlugrayGuy.com</title>
     <style>
         #messages {
@@ -23,16 +23,15 @@
 </head>
 <body>
     <header>
-    <a href="index.html" id="Redirect"><h1>Skibidi Toilet Community - BlugrayGuy.com</h1></a>
+    <a href="index.html" id="Redirect"><h1>BlugrayGuy Website</h1></a>
     <nav>
       <ul>
         <li><a href="https://linktr.ee/blugray">All Socials</a></li>
-        <li><a href="Blugray-console.html">Blugray Console</a></li>
-        <li><a href="summary.html">Skibidi Toilet Ep Summary</a></li>
+        <li><a href="/blugray/Blugray-console.html">Blugray Console</a></li>
       </ul>
     </nav>
     </header>
-    
+    <br><br><br><br>
     <section>
 <h1>Comments Space (beta)</h1>
 <section class="warning">Warning: this is under construction</section>
@@ -105,4 +104,16 @@ onChildAdded(messagesRef, function(snapshot) {
 });
     </script>
 </body>
+<footer class="footer-container">
+  <div class="footer-content">
+    <img src="/Keams.png" alt="Keams" id="kkpng">
+    <span>Powered by KeamsOS ©2024 Discode-Studio, all rights reserved.</span>
+  </div>
+  <nav class="footer-nav">
+    <ul>
+      <li><a href="https://linktr.ee/blugray">All Socials</a></li>
+      <li><a href="/blugray/Blugray-console.html">Blugray Console</a></li>
+    </ul>
+  </nav>
+</footer>
 </html>
