--- a/wiki/blugray-truth.html
+++ b/wiki/blugray-truth.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html - english>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/style.css">
   <link rel="stylesheet" href="/search.css">
   <title>Lost Information of Blugray's Albums - Wiki BlugrayGuy.com</title>
   <meta name="theme-color" content="#0000FF">
   <style>
     .line-space {
-      line-break: 1px;
       margin: 1px;
       border-bottom: 1px solid black;
     }
@@ -19,34 +18,54 @@
 
 <body>
   <header>
-<h1>Blugray's albums lost informations</h1>
-<h4>Made by MirossOffYT on BlugrayGuy.com</h4>
+    <h1>Blugray's Albums Lost Information</h1>
+    <h4>Made by MirossOffYT on BlugrayGuy.com</h4>
   </header>
+  <br><br><br><br>
   <section>
-<div class="line-space"></div>
-<br>
-<h3>This page is under construction</h3>
-<p>More content coming soon...</p>
-<br>
-<div class="line-space"></div>
-<br>
-  This wiki brings together certain (official) information on the different blugray albums, sometimes lost...
-   <br><br> 
-  <h3>- Embracing</h3><br> The first is the Embracing album, this album has a normal appearance but hides a mystery behind...<br>
-  Yes, behind this albums a mystery is hidden, the secret is that behind this album there is a dark story of suicide...<br>
-  This album also contains dark music still unknown to this day, no lyrics and a strange song. This music is "Sadness".
-  <br><br>  
-  <h3>- Yain't Shit</h3><br>
-  <br><br>  
-  <h3>- Farewell Mr.p</h3><br>
-  <br><br>  
-  <h3>- Bleak</h3><br>
-  <br><br>
-  <h3>- Resonant Echoes</h3><br>
-<br><br>
-<div class="line-space"></div><br>
-<a href="/index.html"><button>access to Blugray website</button></a>
-</section>
-</body>
+    <div class="line-space"></div>
+    <br>
+    <h3>This page is under construction</h3>
+    <p>More content coming soon...</p>
+    <br>
+    <div class="line-space"></div>
+    <br>
+    <p>This wiki brings together certain (official) information on the different Blugray albums, sometimes lost...</p>
+    <br>
 
+    <h3>Embracing</h3>
+    <p>The first is the Embracing album. This album has a normal appearance but hides a mystery behind it...</p>
+    <p>Yes, behind this album a mystery is hidden. The secret is that behind this album there is a dark story of suicide...</p>
+    <p>This album also contains dark music still unknown to this day, no lyrics, and a strange song. This music is "Sadness".</p>
+    <br>
+    
+    <h3>Yain't Shit</h3>
+    <br><br>  
+
+    <h3>Farewell Mr. P</h3>
+    <br><br>  
+
+    <h3>Bleak</h3>
+    <br><br>
+
+    <h3>Resonant Echoes</h3>
+    <br><br>
+
+    <div class="line-space"></div>
+    <br>
+    <a href="/index.html"><button>Access to Blugray website</button></a>
+  </section>
+</body>
+<footer class="footer-container">
+  <div class="footer-content">
+    <img src="/Keams.png" alt="Keams" id="kkpng">
+    <span>Powered by KeamsOS ©2024 Discode-Studio, all rights reserved.</span>
+  </div>
+  <nav class="footer-nav">
+    <ul>
+      <li><a href="https://linktr.ee/blugray">All Socials</a></li>
+      <li><a href="/blugray/Blugray-console.html">Blugray Console</a></li>
+    </ul>
+  </nav>
+</footer>
 </html>
