--- a/wiki/Blugray.html
+++ b/wiki/Blugray.html
@@ -1,64 +1,78 @@
-Blugray—
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blugray</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 20px;
+        }
+        h1, h2, h3 {
+            color: #333;
+        }
+        h1 {
+            border-bottom: 2px solid #333;
+            padding-bottom: 10px;
+        }
+        .section {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            padding: 20px;
+            margin-bottom: 20px;
+        }
+        .tie {
+            font-weight: bold;
+            color: #0056b3;
+        }
+    </style>
+</head>
+<body>
+    <h1>Blugray</h1>
+    <div class="section">
+        <p><strong>Blugray</strong> is a musical, mysterious figure and the administrator of the Alpha Hills Laboratory formerly owned by the Government. Blugray has many emotions and ties and this wiki contains all of them.</p>
+        
+        <h2>Ties</h2>
+        <p><span class="tie">Red Tie:</span> Mostly angry, not in a good mood. Can do anything to achieve his goals.</p>
+        <p><span class="tie">Gray Tie:</span> A silent and fun tie. It might become boring but acts better than the other two.</p>
+        <p><span class="tie">Dark Tie/Black Tie:</span> The control force of Blugray and also the most mysterious tie ever. Not much information is available about this tie; however, it has appeared in Skibidi Toilet and in the Demand and 2Lonely music videos.</p>
 
+        <h2>Blugray</h2>
+        <p>The owner and controller of all ties. Activates each tie in different situations. His known abilities are teleportation, mind manipulation, camera POV hacking, immortality, and others that are unknown for now. Each tie also has its favourite song but I'm not including them because the creators can strike me.</p>
 
-Blugray is a musical, mysterious and the administrator of the Aplha Hills Laboratory formerly owned by the Government.
-Blugray has many emotions and ties and this wiki contains all of them.
-  Red Tie:
-Mostly Angry not in a good mood.
-Can do anything to achieve his goals.
-Gray Tie:
-An Silent and fun tie it might become boring but acts better than the other 2.
-Dark Tie/Black Tie:
-The control force of blugray and also the most mysterious Tie ever.
-Not much information is available about this Tie however this tie has appeared in skibidi toilet and in Demand and 2Lonely music videos
-Bonus:
-Blugray:
-The owner and controller of all ties.
-Activates each tie in different situations.
-His only know abilities are Teleportation, mind manipulation, camera pov hacking, immortality and rest are unknown for now. 
-Each Tie also has it's favourite song but I'm not including them because the creators can strike me.
-  
-Besides the tie blugray is the also the author, creator, producer and animator of all.
-Blugray is mistakenly named secret agent in skibidi toilet however it is not his real name so do not trust people calling him secret agent as a real name.
-Blugray is the leader of the neutral team in skibidi toilet which was formerly owned by the government of Alpha Hills Lab.
-It is also mistaken that blugray lives in Georgia or USA do not trust people calling his location from these countries he's an Rusisan who lives in Southern Russia near Georgia.
-Music Video's:
-In 2021 boom wanted to do something new so he left his content and started making blugray music videos however due to lack of views he quitted making the music videos and privated the blugray playlist and all the music videos.
-In this section of the page we discuss about the music videos so let's breakdown all the music videos:
+        <p>Besides the ties, Blugray is also the author, creator, producer, and animator of all. Blugray is mistakenly named "Secret Agent" in Skibidi Toilet; however, it is not his real name, so do not trust people calling him Secret Agent. Blugray is the leader of the neutral team in Skibidi Toilet, which was formerly owned by the government of Alpha Hills Lab. It is also mistaken that Blugray lives in Georgia or USA; do not trust people calling his location from these countries. He is a Russian who lives in Southern Russia near Georgia.</p>
+    </div>
 
-Demand:
-Demand is the first ever blugray music video to be uploaded on the channel.
-The music videos explains about blugray's horrible life in Russia under Mr P aka Putin who is in the form of a tv man and controls the city with his military cameramans.
-Note:The Tv man and cameraman's have nothing to do with skibidi toilet they represented Putin and his army so don't believe these fakes articles that calls demand a secret episode of skibidi toilet.
-Demand also contains blugray's suicidal, mental and physical problems.
-The duration of the video is Almost 6 Minutes.
-We also saw the dark tie in demand for the first time
+    <div class="section">
+        <h2>Music Videos</h2>
+        <p>In 2021, Boom wanted to do something new, so he left his content and started making Blugray music videos. However, due to lack of views, he quit making the music videos and privated the Blugray playlist and all the music videos. In this section of the page, we discuss the music videos, so let's break down all the music videos:</p>
 
-Embracing:
-Embracing was created after demand which also started the beggining of all other the ties besides dark tie which first came in demand.
-Enbracing expressed blugray's feeling of happiness and how he no longer suffers with any problems.
-Embracing also introduces Epic Blugray which is an better version of him and he loves the night and the rain.
-Epic Blugray's power is also in skibidi toilet for example when blugray teleports an green glow appears Epic blugray also has that power but it is mixed with yellow color.
-In Embracing we also saw a mysterious girl which is still unknown to date however it is believed she is blugray's girlfriend or wife.
-Epic Blugray beats all his demon in the music video which represents his problems which are being fixed when they get beaten up.
-2Lonely:
-2Lonely is a music video about blugray's loneliness.
-The video is also one of the only music video which contains the dark tie besides demand.
-We also see some dark figures later in the video which were reused for large cameraman in skibidi toilet the dark figures are probably the problems that disturb blugray.
-Blugray is trapped in a room where he is lonely the videos also contains a photo of the mysterious girl in embracing which later goes away due to flood.
-Blugray becomes EXTREMELY angry at the end and kills all the dark figures and finally calms down.
+        <h3>Demand</h3>
+        <p>Demand is the first ever Blugray music video to be uploaded on the channel. The music video explains Blugray's horrible life in Russia under Mr. P (aka Putin), who is in the form of a TV man and controls the city with his military cameramen. Note: The TV man and cameramen have nothing to do with Skibidi Toilet; they represent Putin and his army. Demand also contains Blugray's suicidal, mental, and physical problems. The duration of the video is almost 6 minutes. We also saw the dark tie in Demand for the first time.</p>
 
-Other music videos contain about some blugray's life incident and also 2 instrumental videos.
-Yaint Shit:
-Yaint shit explains how much blugray suffers while animation for hours nonstop and how his fans just don't care if he lives or die they just want videos.
-The computer in yaint shit is represented as the fan.
-Blugray gets no rest and at the end he has to throw away all his loved ones.
+        <h3>Embracing</h3>
+        <p>Embracing was created after Demand and started the beginning of all other ties besides the dark tie, which first appeared in Demand. Embracing expresses Blugray's feelings of happiness and how he no longer suffers from any problems. Embracing also introduces Epic Blugray, which is a better version of him and loves the night and the rain. Epic Blugray's power is also in Skibidi Toilet. For example, when Blugray teleports, a green glow appears. Epic Blugray also has that power, but it is mixed with yellow color. In Embracing, we also saw a mysterious girl who is still unknown to date. However, it is believed she is Blugray's girlfriend or wife. Epic Blugray beats all his demons in the music video, representing his problems being fixed when they get beaten up.</p>
 
-Farewell Mr.P:
-This song is all about Mr P blugray wants to kill/assasinate mr p for the good of the country and basically roasts him.
+        <h3>2Lonely</h3>
+        <p>2Lonely is a music video about Blugray's loneliness. The video is also one of the only music videos that contain the dark tie besides Demand. We also see some dark figures later in the video, which were reused for large cameramen in Skibidi Toilet. The dark figures are probably the problems that disturb Blugray. Blugray is trapped in a room where he is lonely. The video also contains a photo of the mysterious girl from Embracing, which later goes away due to a flood. Blugray becomes extremely angry at the end, kills all the dark figures, and finally calms down.</p>
 
-Bonus:
-As said earlier in other music videos there are 2 instrumental music which has no original versions because they don't exist.
-One is sadness an sad song.
-And other an unreleased song Bleak which is probably a rap song like yaint shit.
-And that's it thank you for reading.:)
+        <p>Other music videos contain some of Blugray's life incidents and also 2 instrumental videos:</p>
+
+        <h3>Yaint Shit</h3>
+        <p>Yaint Shit explains how much Blugray suffers while animating for hours nonstop and how his fans just don't care if he lives or dies; they just want videos. The computer in Yaint Shit is represented as the fan. Blugray gets no rest, and at the end, he has to throw away all his loved ones.</p>
+
+        <h3>Farewell Mr. P</h3>
+        <p>This song is all about Mr. P. Blugray wants to kill/assassinate Mr. P for the good of the country and basically roasts him.</p>
+
+        <h3>Bonus</h3>
+        <p>As said earlier, in other music videos, there are 2 instrumental tracks which have no original versions because they don't exist. One is "Sadness," a sad song. The other is an unreleased song, "Bleak," which is probably a rap song like "Yaint Shit."</p>
+
+        <p>And that's it. Thank you for reading!</p>
+    </div>
+</body>
+</html>
