--- a/farewellmrp.html
+++ b/farewellmrp.html
@@ -1,11 +1,62 @@
-<pre>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/search.css">
+  <title>Farewell Mr. P Lyrics - BlugrayGuy.com</title>
+  <meta name="theme-color" content="#0000FF">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 20px;
+    }
+    header {
+      text-align: center;
+      padding: 20px;
+    }
+    section {
+      background-color: #fff;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      padding: 20px;
+      margin-bottom: 20px;
+      color: black;
+    }
+    .line-space {
+      margin: 1px;
+      border-bottom: 1px solid black;
+    }
+    pre {
+      white-space: pre-wrap;
+      word-wrap: break-word;
+    }
+  </style>
+</head>
+
+<body>
+  <header>
+    <h1>Farewell Mr. P Lyrics</h1>
+    <h4>BlugrayGuy.com</h4>
+  </header>
+  <br><br><br><br>
+
+  <section>
+    <div class="line-space"></div>
+    <br>
+    <pre>
 Hey, hey
 I'm going right, grab the clothes back the skin
 Time for five shit before we steam
 Bitch shot from the dry myself clean
 
 All bitch try to digest me
-Mr.p try to get me
+Mr. P try to get me
 Put a massacrety don't believe in shoot, hate!
 but are you ready for receiving!?
 
@@ -18,7 +69,6 @@ he make all I want but don't complain
 so many times diary's born on my stage
 I could stay alive in the country of my kindy
 and I said, it's just time for a minute
-
 
 all time all the fuckers trying to frame me
 if you ain't an army in a union
@@ -39,11 +89,11 @@ have you ever got a sense of fear for your talking shit is getting real
 when the opposition's starving
 
 nope no more they ain't a target
-they're fucking ded, they're in jail
+they're fucking dead, they're in jail
 they're smarted now..
 
-im on list of hundred like a billboard 
-number one murder on sight, they're just some killers, im changing boy
+I'm on list of hundred like a billboard 
+number one murder on sight, they're just some killers, I'm changing boy
 ain't got nobody to fear put your fake card close show up with the villains...
 
 Homeland, it's the middle of the rules
@@ -53,11 +103,11 @@ make your front lap and backs be stacking lions on the way but you know you're l
 but it ain't on me
 long ago I had a plan b
 camera around what they can see
-Im already there, look back, right behind mr.p
+I'm already there, look back, right behind Mr. P
 
 now he's just doing 
-calm down you got wet p
-Now listen carefull bitch!
+calm down you got wet P
+Now listen carefully bitch!
 
 Too long for this plane I'm leaving 
 we're a legend if weak people feeling
@@ -67,8 +117,7 @@ So long for the plane I'm leaving
 we're a legend if weak people feeling
 where no ego maniac can be leading 
 Singing for the last time...
-FAREWELL MR.P!!
-
+FAREWELL MR. P!!
 
 Ha look, get away with a murder
 And I will give you hundreds time between the line is needed
@@ -99,7 +148,7 @@ run away and cry
 with your daughter by your side
 Try to beat me now
 I am stronger than you're capable to mind
-(Thats it ?)
+(That's it ?)
 
 Too long for this plane I'm leaving
 Where I'll bet you be free feeling
@@ -108,7 +157,7 @@ where the difference no rhythms of the killing
 So long for the plane I'm leaving
 Where election gives people feeling
 Where no every maniac can be leaning
-See the shoot on my ears... (Farewell mr.p)
+See the shoot on my ears... (Farewell Mr. P)
 
 Too long for this plane I'm leaving
 Where I'll let you leave people feeling
@@ -117,9 +166,24 @@ where the difference no rhythms of the killing
 So long for the plane I'm leaving
 Where I'll let you leave people feeling
 Sing for the last time...
-Farewell Mr.p (Farewell Mr.p)
-Goodbye mr.p (farewell mr.p)
+Farewell Mr. P (Farewell Mr. P)
+Goodbye Mr. P (Farewell Mr. P)
 
 I'm not your opportunity, you never control
 Once, you be a loser at thing, try to get me now peace, you just missed the (god)
-</pre>
+    </pre>
+  </section>
+</body>
+<footer class="footer-container">
+  <div class="footer-content">
+    <img src="/Keams.png" alt="Keams" id="kkpng">
+    <span>Powered by KeamsOS ©2024 Discode-Studio, all rights reserved.</span>
+  </div>
+  <nav class="footer-nav">
+    <ul>
+      <li><a href="https://linktr.ee/blugray">All Socials</a></li>
+      <li><a href="/blugray/Blugray-console.html">Blugray Console</a></li>
+    </ul>
+  </nav>
+</footer>
+</html>
