--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
   
   <meta property="title" content="BlugrayGuy Website">
     <meta property="description" content="Official BlugrayGuy.com by Blugray.">
-    <link rel="shortcut icon" href="astrologo.webp">
-    <meta property="og:image" content="https://media.discordapp.net/attachments/1169330015423430696/1214657060076257280/Picsart_24-03-05_20-33-22-534.png?ex=65f9e88a&is=65e7738a&hm=1a0d4cb46d95c68bd3b5ba773e67e43bbbeed41845b9343f2a80a3214337b750&">
-    <link rel="apple-touch-icon" href="https://media.discordapp.net/attachments/662665566200528906/1215021749352005662/Picsart_24-03-06_20-32-28-353.png?ex=65fb3c2f&is=65e8c72f&hm=75577cf9e5783dd6366d974f5b604c05953d964a59616c203a54eca275b9141d&">
+    <link rel="shortcut icon" href="neutral.png">
+    <meta property="og:image" content="Keams.png">
     <meta name="theme-color" content="#0000FF">
     <meta property="og:type" content="website">
     <meta property="og:title" content="BlugrayGuy.com">
-    <meta property="og:description" content="Skibidi Toilet Community by blugrayGuy is a website of secret about skibidi toilet and some information about Skibidi toilet and blugray...">
+    <meta property="og:description" content="Official BlugrayGuy Website - BlugrayGuy.com">
     <meta property="og:site_name" content="BlugrayGuy.com">
     <meta property="fb:title" content="BlugrayGuy.com">
     <meta name="twitter:title" content="BlugrayGuy.com">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:image" content="https://media.discordapp.net/attachments/1169330015423430696/1214915589861281843/Picsart_24-03-06_13-40-27-453.png?ex=65fad950&is=65e86450&hm=1f83e09bbb221e9931b5e160795adbadb060cc652ce7e46c30b42e0b0f6036ab&">
+    <meta name="twitter:image" content="Keams.png">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="search.css">
     <style>
