--- a/index.html
+++ b/index.html
@@ -74,19 +74,19 @@
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
-    <a href="/skibidi/lastest-video.html"><img class="imgrad" src="/images/76.jpg" style="width:100%"></a>
+    <a href="Blugray/skibidi/lastest-video.html"><img class="imgrad" src="Blugray/images/76.jpg" style="width:100%"></a>
     <div class="text"><p>Lastest episode</p><h2>Skibidi Toilet 76 (Full episode)</h2></div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 3</div>
-    <img class="imgrad" src="/images/soon.jpg" style="width:100%">
+    <img class="imgrad" src="Blugray/images/soon.jpg" style="width:100%">
     <div class="text"><p>Coming soon episode</p><h2>Skibidi Toilet 77 (part 1)</h2></div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 3</div>
-    <img class="imgrad" src="/images/duchess.jpg" style="width:100%">
+    <img class="imgrad" src="Blugray/images/duchess.jpg" style="width:100%">
     <div class="text"><p>New character</p><h2>Astro Duchess</h2></div>
   </div>
 
