--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ window.onload = initSlides;
   <nav class="footer-nav">
     <ul>
       <li><a href="https://linktr.ee/blugray">All Socials</a></li>
-      <li><a href="blugray/Blugray-console.html">Blugray Console</a></li>
+      <li><a href="/Blugray/Blugray-console.html">Blugray Console</a></li>
     </ul>
   </nav>
 </footer>
