--- a/Miscellaneous/YouTube.html
+++ b/Miscellaneous/YouTube.html
@@ -87,7 +87,7 @@
   <nav class="footer-nav">
     <ul>
       <li><a href="https://linktr.ee/blugray">All Socials</a></li>
-      <li><a href="/blugray/Blugray-console.html">Blugray Console</a></li>
+      <li><a href="https://blugrayguylegit.github.io/Blugray/Blugray/Blugray-console.html">Blugray Console</a></li>
     </ul>
   </nav>
 </footer>
