--- a/Miscellaneous/comments-space.html
+++ b/Miscellaneous/comments-space.html
@@ -112,7 +112,7 @@ onChildAdded(messagesRef, function(snapshot) {
   <nav class="footer-nav">
     <ul>
       <li><a href="https://linktr.ee/blugray">All Socials</a></li>
-      <li><a href="/blugray/Blugray-console.html">Blugray Console</a></li>
+      <li><a href="">Blugray Console</a></li>
     </ul>
   </nav>
 </footer>
