--- a/Blugray/farewellmrp.html
+++ b/Blugray/farewellmrp.html
@@ -182,7 +182,7 @@ Once, you be a loser at thing, try to get me now peace, you just missed the (god
   <nav class="footer-nav">
     <ul>
       <li><a href="https://linktr.ee/blugray">All Socials</a></li>
-      <li><a href="/blugray/Blugray-console.html">Blugray Console</a></li>
+      <li><a href="https://blugrayguylegit.github.io/Blugray/Blugray/Blugray-console.html">Blugray Console</a></li>
     </ul>
   </nav>
 </footer>
