--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
   <br>
   <header>
-    <a href="/index.html" id="Redirect"><h1>BlugrayGuy Website.</h1></a>
+    <a href="index.html" id="Redirect"><h1>BlugrayGuy Website.</h1></a>
     <details>
      <summary>
        Search 🔎 
@@ -74,7 +74,7 @@
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
-    <a href="Blugray/skibidi/lastest-video.html"><img class="imgrad" src="images/76.jpg" style="width:100%"></a>
+    <a href="skibidi/lastest-video.html"><img class="imgrad" src="images/76.jpg" style="width:100%"></a>
     <div class="text"><p>Lastest episode</p><h2>Skibidi Toilet 76 (Full episode)</h2></div>
   </div>
 
