--- a/skibidi/lastest-video.html
+++ b/skibidi/lastest-video.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lastest Episode</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
   <style>
     iframe {
       margin: -7%;
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-    <a href="/index.html" id="Redirect"><h1>BlugrayGuy Website.</h1></a>
+    <a href="index.html" id="Redirect"><h1>BlugrayGuy Website.</h1></a>
   </header>
   <br><br>
 
@@ -28,7 +28,7 @@
     <br><br>
 <footer class="footer-container">
   <div class="footer-content">
-    <img src="/Keams.png" alt="Keams" id="kkpng">
+    <img src="Keams.png" alt="Keams" id="kkpng">
     <span>Powered by KeamsOS ©2024 Discode-Studio, all rights reserved.</span>
   </div>
   <nav class="footer-nav">
