--- a/index.html
+++ b/index.html
@@ -74,19 +74,19 @@
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
-    <a href="skibidi/lastest-video.html"><img class="imgrad" src="images/76.jpg" style="width:100%"></a>
+    <a href="/skibidi/lastest-video.html"><img class="imgrad" src="/images/76.jpg" style="width:100%"></a>
     <div class="text"><p>Lastest episode</p><h2>Skibidi Toilet 76 (Full episode)</h2></div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 3</div>
-    <img class="imgrad" src="images/soon.jpg" style="width:100%">
+    <img class="imgrad" src="/images/soon.jpg" style="width:100%">
     <div class="text"><p>Coming soon episode</p><h2>Skibidi Toilet 77 (part 1)</h2></div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 3</div>
-    <img class="imgrad" src="images/duchess.jpg" style="width:100%">
+    <img class="imgrad" src="/images/duchess.jpg" style="width:100%">
     <div class="text"><p>New character</p><h2>Astro Duchess</h2></div>
   </div>
 
@@ -122,10 +122,39 @@
           List by case
         </summary>
         <div class="links">
-          <a href="Skibidi">Skibidi Toilet</a>
-          <a href="Blugray">Blugray</a>
-          <a href="Miscellaneous">Miscellaneous</a>
-          <a href="Wiki">Wiki</a>
+          <details>
+            <summary>
+              Blugray list
+            </summary>
+            <a href="mod-application.html">Mod-application</a>
+            <a href="darktie.html">Dark tie</a>
+            <a href="farewellmrp.html">Farewell Mr.p</a>
+          </details>
+          <details>
+            <summary>
+              Skibidi list
+            </summary>
+            <a href="lastest-video.html">Lastest-video</a>
+            <a href="storyline.html">Storyline</a>
+            <a href="summary.html">Summary</a>
+            <a href="team.html">All team</a>
+          </details>
+          <details>
+            <summary>
+              wiki list
+            </summary>
+            <a href="wiki/wiki.index.html">How to make a wiki?</a>
+            <a href="wiki/Blugray.html">Blugray</a>
+            <a href="wiki/blugray-truth.html">Blugray-truth</a>
+          </details>
+          <details>
+            <summary>
+              Miscellaneous list
+            </summary>
+            <a href="comments-space.html">Comments-space</a>
+            <a href="oldblog.html">Old blog of DaFuq!?Boom!</a>
+            <a href="Youtube.html">Youtube</a>
+          </details>
         </div>
       </details>
     </details>
@@ -255,7 +284,7 @@ window.onload = initSlides;
   <nav class="footer-nav">
     <ul>
       <li><a href="https://linktr.ee/blugray">All Socials</a></li>
-      <li><a href="https://blugrayguylegit.github.io/Blugray/Blugray/Blugray-console.html">Blugray Console</a></li>
+      <li><a href="/blugray/Blugray-console.html">Blugray Console</a></li>
     </ul>
   </nav>
 </footer>
