--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               Blugray list
             </summary>
             <a href="mod-application.html">Mod-application</a>
-            <a href="darktie.html">Dark tie</a>
+            <a href="dark-tie.html">Dark tie</a>
             <a href="farewellmrp.html">Farewell Mr.p</a>
           </details>
           <details>
@@ -153,7 +153,7 @@
             </summary>
             <a href="comments-space.html">Comments-space</a>
             <a href="oldblog.html">Old blog of DaFuq!?Boom!</a>
-            <a href="Youtube.html">Youtube</a>
+            <a href="player.html">Youtube Player (NO ADS)</a>
           </details>
         </div>
       </details>
