--- a/index.html
+++ b/index.html
@@ -284,7 +284,8 @@ window.onload = initSlides;
   <nav class="footer-nav">
     <ul>
       <li><a href="https://linktr.ee/blugray">All Socials</a></li>
-      <li><a href="/blugray/Blugray-console.html">Blugray Console</a></li>
+      <li><a href="/
+            Blugray-console.html">Blugray Console</a></li>
     </ul>
   </nav>
 </footer>
